Core Sync: 2418 - Cap for PAtkSpeed, MAtkSpeed, Evasion 2419 - Stadium Z correction 2420 - Fix for weapon equip/unequip when casting/attacking 2421 - Upgrading pickup system for pets (herbs) 2422 - Pets will start attack after casting an offensive skill 2423 - Improving rules against raid group buffing from high level chars 2424/25 - NPE fixes 2427 - Cursed Weapon wielder cannot receive clanhall buffs 2428 - PVP damage bonus now affects blow skills 2429 - Grid turnon/turnoff task is now synchronized 2432 - Blow doesn't ignore transfer pain/blow can break casts 2433 - Just cleanup 2434/35 - Synchronization of L2Party.getPartyMembers() / getLeader()
git-svn-id: http://svn.l2jfree.com/l2jfree@4521 6ff00ba9-25cd-4355-987e-099c62bc2628